<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Car Maintenance</string>
    <string name="action_about">Info</string>
    <string name="about_text">file:///android_asset/about.html</string>
    <string name="sql_file">file:///android_asset/CarMaintenance.sql</string>
     <string name="title_activity_about_message">About Car Maintenance</string>
     <string name="title_activity_work_message">Work</string>
     <string name="title_activity_item_message">Item</string>
     <string name="title_activity_vehicle_message">Vehicle</string>
     <string name="title_activity_location_message">Location</string>
     <string name="title_activity_receipt_message">Receipt</string>
     <string name="title_activity_lookup_message">AndroidLookup Results</string>
     <string name="title_activity_whois_message">Whois Information</string>
     <string name="vehicles">Vehicles</string>
     <string name="items">Items</string>
     <string name="receipts">Receipts</string>
     <string name="locations">Locations</string>
     <string name="vehicle">Vehicle</string>
     <string name="item">Item</string>
     <string name="work">Work</string>
     <string name="receipt">Receipt</string>
     <string name="location">Location</string>
     <string name="create_data">Create Sample Data</string>
     <string name="settings">Settings</string>
     <string name="green">Green</string>
     <string name="blue">Blue</string>
     <string name="red">Red</string>
     <string name="highlight">Color Theme</string>
     <string name="highlightColorTitle">Select Color</string>
     <string name="autosave">Autosave</string>
     <string name="autosaveDescription">Automatically Save Changes?</string>
     
     <string-array name="highlightColorEntries">
        
        <item>Blue</item>
        <item>Green</item>
        <item>Red</item>
        <item>Magenta</item>
        <item>Yellow</item>
        <item>Cyan</item>
    </string-array>

    <string-array name="highlightColorValues">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        
    </string-array>
    
    <string name="highlightColorDefault">0</string>
    <string name="baseURLTitle">Url for remote database access.</string>
    <string name="baseURLDefault">http://people.cs.clemson.edu/~jburto2/CarMaintenance/</string>
    
</resources>
    

