<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="3"
    tools:context=".MainActivity" >

    <!--
         Image button for lookup icon used under Creative Commons license from:  
     	 http://www.iconarchive.com/show/old-school-icons-by-babasse/recherche-internet-icon.html
    -->
    <!--
         Image button for internet picture used under Creative Commons license from:  
     	 http://commons.wikimedia.org/wiki/File:Internet1.jpg
    -->
    
    <!--  http://findicons.com/search/car -->
    
    <!-- http://stackoverflow.com/questions/5128949/resize-Button -->
    <!-- http://stackoverflow.com/questions/1532876/android-combining-text-image-on-a-button-or-Button -->
    
     <Button
        android:id="@+id/Button1"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_row="0"
        android:layout_width="100dip" 
	    android:layout_height="100dip"
        android:background="@drawable/ic_car" 
        android:text="@string/vehicles"
        android:gravity="bottom|center"
        android:paddingBottom="4dp"
        android:onClick="onVehicleButtonClick"
        />

    <Button
        android:id="@+id/Button2"
        android:layout_column="1"
        android:layout_gravity="center_horizontal|center_vertical"
	    android:layout_width="100dip" 
	    android:layout_height="100dip"
        android:layout_row="0"
        android:background="@drawable/ic_work" 
                android:text="@string/work"
        android:gravity="bottom|center"
        android:paddingBottom="4dp"
        android:onClick="onWorkButtonClick"
        />
    
    <Button
        android:id="@+id/Button3"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|center_vertical"
	    android:layout_width="100dip" 
	    android:layout_height="100dip"
	    android:layout_row="1"
        android:background="@drawable/ic_receipt" 
        android:text="@string/receipts"
        android:gravity="bottom|center"
        android:onClick="onReceiptButtonClick"
        android:paddingBottom="4dp"/>

    <Button
        android:id="@+id/Button4"
        android:layout_width="100dip"
        android:layout_height="100dip"
        android:layout_column="1"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_row="1"
        android:background="@drawable/ic_item"
        android:text="@string/items"
        android:gravity="bottom|center"
        android:paddingBottom="4dp"
        android:onClick="onItemButtonClick"
         />

    <Button
        android:id="@+id/Button5"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|center_vertical"
	    android:layout_width="100dip" 
	    android:layout_height="100dip"
        android:layout_row="2"
        android:background="@drawable/ic_location"
        android:text="@string/locations"
        android:gravity="bottom|center"
        android:paddingBottom="4dp"
        android:onClick="onLocationButtonClick"
         />

    <Button
        android:id="@+id/Button6"
        android:layout_column="1"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_row="2"
        android:layout_width="100dip" 
	    android:layout_height="100dip"
        android:background="@drawable/ic_about"
        android:text="@string/action_about"
        android:gravity="bottom|center"
        android:paddingBottom="4dp"
        android:onClick="onAboutButtonClick"
         />



</GridLayout>